# Intersection-management-using-RL

./: .gitignore  .log.txt  README.md  main.py  pyproject.toml
City_map/: city_map.sumocfg  citymap.netecfg
benchmarks/: fixed-hard-eval.txt  max-pressure-easy-eval.txt  max-pressure-hard-eval.txt
models_trained_on_difficult_traffic/: mappo_easy_eval.txt  mappo_hard_eval.txt  ppo_easy-eval.txt  ppo_hard_eval.txt
models_trained_on_easy_traffic/: mappo_easy_eval.txt  mappo_hard_eval.txt  ppo_easy_eval.txt  ppo_hard_eval.txt
src/: agent_dqn.py  agent_mappo.py  agent_ppo.py  env_config.py  eval_baseline.py  eval_best.py  eval_common.py  eval_model.py  params.py  setup_sumo.py  utils.py
src/City_map/: city_map.net.xml  city_map.rou.alt.xml  city_map.rou.xml  city_map.sumocfg  generate_traffic.py  trips.trips.xml
src/City_map_2/: city2.net.xml  city2.netecfg  city2.rou.alt.xml  city2.rou.xml  city2.sumocfg  city2.trips.xml  city2_eval.rou.xml  city2_hard.rou.alt.xml  city2_hard.rou.xml  city2_hard.trips.xml  city2_hard_eval.rou.xml  city2_hard_train_0.rou.xml  city2_hard_train_1.rou.xml  city2_hard_train_2.rou.xml  city2_hard_train_3.rou.xml  city2_hard_train_4.rou.xml  city2_hard_train_5.rou.xml  city2_hard_train_6.rou.xml  city2_hard_train_7.rou.xml  city2_train_0.rou.xml  city2_train_1.rou.xml  city2_train_2.rou.xml  city2_train_3.rou.xml  city2_train_4.rou.xml  city2_train_5.rou.xml  city2_train_6.rou.xml  city2_train_7.rou.xml  generate_traffic.py
src/logs/: baseline_fixed_1.txt  baseline_fixed_2.txt  baseline_max-pressure_1.txt  ewaluacja_1.txt  trening_1.txt  (+26 more)
(+41 files in other folders)
